--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="image.jpg">
+                    <img src="projects/image.jpg">
                 </div>
                 <div class="column right">
                     <div class="text">I am Kanupriya ,<br> I am a <span class="typing-2"></span></div>
@@ -144,8 +144,8 @@
                 <div class="bottom">
                     <div class="columns project">
                         <div class="content">
-                            <img src="projects/project2.png" alt="project2" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
-                            <h6>World Population Dashboard</h6>
+                            <img src="projects/project22.png" alt="project2" style="width:100%; " onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+                            <!-- <h6>World Population Dashboard</h6> -->
                             <p></p>
                         </div>
                     </div>
@@ -153,28 +153,28 @@
                     <div class="columns project">
                         <div class="content">
                             <img src="projects/project3.png" alt="project3" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
-                            <h6>Category Product System</h6>
+                            <!-- <h6>Category Product System</h6> -->
                             <p></p>
                         </div>
                     </div>
                     <div class="columns project">
                         <div class="content">
                             <img src="projects/project1.png" alt="project1" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
-                            <h6>HandWritten Character Recognition</h6>
+                            <!-- <h6>HandWritten Character Recognition</h6> -->
                             <p></p>
                         </div>
                     </div>
                     <div class="columns project">
                         <div class="content">
                             <img src="projects/project4.png" alt="project4" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
-                            <h6>Online Voting System</h6>
+                            <!-- <h6>Online Voting System</h6> -->
                             <p></p>
                         </div>
                     </div>
                     <div class="columns project">
                         <div class="content">
                             <img src="projects/project5.png" alt="project5" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
-                            <h6>Phone book directory</h6>
+                            <!-- <h6>Phone book directory</h6> -->
                             <p></p>
                         </div>
                     </div>
