--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="projects/image.jpg">
+                    <img src="image.jpg">
                 </div>
                 <div class="column right">
                     <div class="text">I am Kanupriya ,<br> I am a <span class="typing-2"></span></div>
@@ -199,6 +199,13 @@
                             <p></p>
                         </div>
                     </div>
+                    <div class="columns certificate">
+                        <div class="content">
+                            <img src="projects/certificate4.PNG" alt="certificate4" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
+                            <h4></h4>
+                            <p></p>
+                        </div>
+                    </div>
                 </div>
 
                 <div id="myModal" class="modal">
@@ -207,45 +214,49 @@
                     <span class="next" onclick="plusSlides(1)">&#10095;</span>
                     <div class="modal-content">
                         <div class="mySlides">
-                            <div class="numbertext">1 / 8</div>
+                            <div class="numbertext">1 / 9</div>
                             <img src="projects/project2.png" style="width:100%">
                         </div>
 
                         <div class="mySlides">
-                            <div class="numbertext">2 / 8</div>
+                            <div class="numbertext">2 / 9</div>
                             <img src="projects/project3.png" style="width:100%">
                         </div>
 
                         <div class="mySlides">
-                            <div class="numbertext">3 / 8</div>
+                            <div class="numbertext">3 / 9</div>
                             <img src="projects/project1.png" style="width:100%">
                         </div>
 
                         <div class="mySlides">
-                            <div class="numbertext">4 / 8</div>
+                            <div class="numbertext">4 / 9</div>
                             <img src="projects/project4.png" style="width:100%">
                         </div>
 
                         <div class="mySlides">
-                            <div class="numbertext">5 / 8</div>
+                            <div class="numbertext">5 / 9</div>
                             <img src="projects/project5.png" style="width:100%">
                         </div>
 
                         <div class="mySlides">
-                            <div class="numbertext">6 / 8</div>
+                            <div class="numbertext">6 / 9</div>
                             <img src="projects/certificate1.PNG" style="width:100%">
                         </div>
 
                         <div class="mySlides">
-                            <div class="numbertext">7 / 8</div>
+                            <div class="numbertext">7 / 9</div>
                             <img src="projects/certificate2.PNG" style="width:100%">
                         </div>
 
                         <div class="mySlides">
-                            <div class="numbertext">8 / 8</div>
+                            <div class="numbertext">8 / 9</div>
                             <img src="projects/certificate3.PNG" style="width:100%">
                         </div>
 
+                        <div class="mySlides">
+                            <div class="numbertext">9 / 9</div>
+                            <img src="projects/certificate4.PNG" style="width:100%">
+                        </div>
                         <div class="caption-container">
                             <p id="caption"></p>
                         </div>
@@ -273,6 +284,9 @@
                         </div>
                         <div class="columnn">
                             <img class="demo cursor" src="projects/certificate3.PNG" style="width:100%" onclick="currentSlide(8)">
+                        </div>
+                        <div class="columnn">
+                            <img class="demo cursor" src="projects/certificate4.PNG" style="width:100%" onclick="currentSlide(9)">
                         </div>
                     </div>
                 </div>
