--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="image.jpg">
+                    <img src="projects/image.jpg">
                 </div>
                 <div class="column right">
                     <div class="text">I am Kanupriya ,<br> I am a <span class="typing-2"></span></div>
